# cpp-game-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: config.json
src/: api_handler.cpp  api_handler.h  app.cpp  app.h  app_serialization.cpp  app_serialization.h  boost_json.cpp  collision_detector.cpp  collision_detector.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logging_request_handler.h  magic_defs.h  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  postgres.cpp  postgres.h  request_handler.cpp  request_handler.h  response_m.cpp  response_m.h  server_logger.cpp  server_logger.h  state_saver.cpp  state_saver.h  tagged.h  ticker.cpp  ticker.h
tests/: collision_detector_tests.cpp  model_tests.cpp  state_serialization_tests.cpp
